--- a/materialdesigndemo/build.gradle
+++ b/materialdesigndemo/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
 
     implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
