--- a/andriodprimarycodedemo/src/main/AndroidManifest.xml
+++ b/andriodprimarycodedemo/src/main/AndroidManifest.xml
@@ -2,31 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.andriodprimarycodedemo">
 
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".four_components.about_activity.AboutActivity">
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".four_components.about_activity.AboutActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop">
 
         </activity>
-        <activity android:name=".four_components.about_service.ServiceActivity">
+        <activity android:name=".four_components.about_service.ServiceActivity"></activity>
+
+        <service android:name=".four_components.about_service.StartService"></service>
+        <service android:name=".four_components.about_service.BindService"></service>
+
+        <activity android:name=".four_components.about_broadcastreceiver.BroadcastReceiverActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".four_components.about_service.StartService">
 
-        </service>
-        <service android:name=".four_components.about_service.BindService">
+        <receiver
+            android:name=".four_components.about_broadcastreceiver.StaticRegisterReceiver">
+            <intent-filter>
+                <!--接收的广播类型-->
+                <action android:name="MY_STATIC_BROADCAST"/>
+                <action android:name="Intent.ACTION_SCREEN_OFF"/>
+            </intent-filter>
+        </receiver>
 
-        </service>
     </application>
 
 </manifest>
