--- a/andriodprimarycodedemo/src/main/AndroidManifest.xml
+++ b/andriodprimarycodedemo/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.andriodprimarycodedemo">
 
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
     <application
-        android:name=".App"
+        android:name=".util.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,41 +16,42 @@
         <activity
             android:name=".four_components.about_activity.AboutActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"></activity>
+        <activity android:name=".four_components.about_service.ServiceActivity">
 
         </activity>
-        <activity android:name=".four_components.about_service.ServiceActivity">
+
+        <service android:name=".four_components.about_service.StartService" />
+        <service android:name=".four_components.about_service.BindService" />
+        <!-- 服务设置成远程服务需要设置属性 android:process=":remote" -->
+        <!-- 因为设置成远程服务后不能显示启动所以设置actino节点，使得Service可以隐式启动 -->
+        <service
+            android:name=".four_components.about_service.BindRemoteService"
+            android:process=":remote">
+            <intent-filter>
+                <action android:name="com.example.andriodprimarycodedemo.MyAIDLService" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".four_components.about_broadcastreceiver.BroadcastReceiverActivity"></activity>
+
+        <receiver android:name=".four_components.about_broadcastreceiver.StaticRegisterReceiver">
+            <intent-filter>
+
+                <!-- 接收的广播类型 -->
+                <action android:name="MY_STATIC_BROADCAST" />
+                <action android:name="Intent.ACTION_SCREEN_OFF" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".custom_view.CustomViewActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service android:name=".four_components.about_service.StartService"></service>
-        <service android:name=".four_components.about_service.BindService"></service>
-        <!--服务设置成远程服务需要设置属性 android:process=":remote"-->
-        <!--因为设置成远程服务后不能显示启动所以设置actino节点，使得Service可以隐式启动-->
-        <service android:name=".four_components.about_service.BindRemoteService"
-            android:process=":remote">
-            <intent-filter>
-                <action android:name="com.example.andriodprimarycodedemo.MyAIDLService"/>
-            </intent-filter>
-        </service>
-
-        <activity android:name=".four_components.about_broadcastreceiver.BroadcastReceiverActivity">
-
-        </activity>
-
-        <receiver
-            android:name=".four_components.about_broadcastreceiver.StaticRegisterReceiver">
-            <intent-filter>
-                <!--接收的广播类型-->
-                <action android:name="MY_STATIC_BROADCAST"/>
-                <action android:name="Intent.ACTION_SCREEN_OFF"/>
-            </intent-filter>
-        </receiver>
-
     </application>
 
 </manifest>
