--- a/andriodprimarycodedemo/src/main/AndroidManifest.xml
+++ b/andriodprimarycodedemo/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.example.andriodprimarycodedemo">
 
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <!--应用跨进程通讯的权限-->
+    <uses-permission android:name="com.chenlei.PROVIDER"/>
+    <!--可被其他应用跨进程通讯访问的权限-->
+    <permission android:name="com.chenlei.PROVIDER" android:protectionLevel="normal"/>
 
     <application
         android:name=".util.App"
@@ -16,10 +20,8 @@
         <activity
             android:name=".four_components.about_activity.AboutActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".four_components.about_service.ServiceActivity">
-
-        </activity>
+            android:launchMode="singleTop" />
+        <activity android:name=".four_components.about_service.ServiceActivity"></activity>
 
         <service android:name=".four_components.about_service.StartService" />
         <service android:name=".four_components.about_service.BindService" />
@@ -33,7 +35,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".four_components.about_broadcastreceiver.BroadcastReceiverActivity"></activity>
+        <activity android:name=".four_components.about_broadcastreceiver.BroadcastReceiverActivity" />
 
         <receiver android:name=".four_components.about_broadcastreceiver.StaticRegisterReceiver">
             <intent-filter>
@@ -45,13 +47,30 @@
         </receiver>
 
         <activity android:name=".custom_view.CustomViewActivity">
-
+            
+        </activity>
+        <activity android:name=".four_components.about_content_provider.ContentProviderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--声明外界进程可访问该Provider的权限（读 & 写）-->
+        <!--android:permission="com.chenlei.PROVIDER"-->
+        <!--权限可细分为读 & 写的权限-->
+        <!--外界需要声明同样的读 & 写的权限才可进行相应操作，否则会报错-->
+        <!--android:readPermisson = "scut.carson_ho.Read"-->
+        <!--android:writePermisson = "scut.carson_ho.Write"-->
+
+        <!--设置此provider是否可以被其他进程使用-->
+        <!--android:exported="true"-->
+        <provider
+            android:authorities="com.chenlei.content_provider"
+            android:name=".four_components.about_content_provider.CreateLocalContentProvider"
+            android:permission="com.chenlei.PROVIDER"
+            android:exported="true"
+            />
     </application>
 
 </manifest>
